add students resource

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_from: .rubocop_todo.yml
 
 Style/Documentation:
   Enabled: false
+  
 
 AllCops:
   NewCops: enable
+  Exclude:
+    - db/**/*
